Enabled upgrade support for users on v1.10.x 🙄 Don't attempt key assignment record update if there is no value to update with Fix position relative on all key input fields Make sure the species dropdown is visible in settings Species search in explore & charts

--- a/css/style.css
+++ b/css/style.css
@@ -941,7 +941,7 @@ transform: scale(1.1); /* Increase size by 10% on hover */
     margin-top: 0.25rem;
     padding: 0;
     display: none;
-    z-index: 4;
+    z-index: 1001;
     color: black;
   }
   
